--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
 			if (decision['enabled']){
 				document.querySelector('head > link:nth-child(12)').setAttribute('href', 'css/main2.css');
-				document.querySelector('body > header > h1').innerText = decision['brandMessaging'];
+				document.querySelector('body > header > h1').innerText = decision['brandmessaging'];
 			}
 
 			document.querySelectorAll('.text-nav').forEach(item => {
