--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
 			if (decision['enabled']){
 				document.querySelector('head > link:nth-child(12)').setAttribute('href', 'css/main2.css');
-				document.querySelector('#content > section > div.work.nav.col-md-6 > h2 > span').innerText = decision['brandmessaging'];
+				document.querySelector('#content > section > div.work.nav.col-md-6 > h2 > span').innerText = decision['variables'].brandmessaging;
 			}
 
 			document.querySelectorAll('.text-nav').forEach(item => {
