--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
 
 			var user = optimizelyClient.createUserContext(userId, attributes);
 			var decision = user.decide('example');
+			window.decision = decision;
 
 			if (decision['enabled']){
 				document.querySelector('head > link:nth-child(12)').setAttribute('href', 'css/main2.css');
