--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 		const userId = urlParams.get('userId')
 		const sdkKey = urlParams.get('sdkKey')
 		const attributes = {tier: urlParams.get('tier')};
-		const optimizelyOptions = optimizelySdk.OptimizelyDecideOption;
+	//	const optimizelyOptions = optimizelySdk.OptimizelyDecideOption;
 
 
 		optimizelySdk.setLogger(optimizelySdk.logging.createLogger());
@@ -33,17 +33,17 @@
 		  window.optimizelyClient = optimizelyClient
 			//console.log('reason', result.reason);
 
-			var config = optimizelyClient.getOptimizelyConfig();
+		//	var config = optimizelyClient.getOptimizelyConfig();
 
-			var decisionEvent = (config['featuresMap']['example']['variablesMap']['disable_decision_event'].value == 'true') ? optimizelyOptions.DISABLE_DECISION_EVENT : null;
+		//	var decisionEvent = (config['featuresMap']['example']['variablesMap']['disable_decision_event'].value == 'true') ? optimizelyOptions.DISABLE_DECISION_EVENT : null;
 
-			var user = optimizelyClient.createUserContext(userId, attributes);
-			var decision = user.decide('example', [decisionEvent]);
+//var user = optimizelyClient.createUserContext(userId, attributes);
+			//var decision = user.decide('example', [decisionEvent]);
 
-			if (decision['enabled']){
-				document.querySelector('head > link:nth-child(12)').setAttribute('href', 'css/main2.css');
-				document.querySelector('#content > section > div.work.nav.col-md-6 > h2 > span').innerText = decision['variables'].brand_messaging;
-			}
+		//	if (decision['enabled']){
+		//		document.querySelector('head > link:nth-child(12)').setAttribute('href', 'css/main2.css');
+		//		document.querySelector('#content > section > div.work.nav.col-md-6 > h2 > span').innerText = decision['variables'].brand_messaging;
+		//	}
 
 			document.querySelectorAll('.text-nav').forEach(item => {
 	  		item.addEventListener('click', event => {
