--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
 window.optimizelySdk = optimizelySdk;
 
 		optimizelySdk.setLogger(optimizelySdk.logging.createLogger());
-		optimizelySdk.setLogLevel(optimizelySdk.enums.LOG_LEVEL.DEBUG);
+//		optimizelySdk.setLogLevel(optimizelySdk.enums.LOG_LEVEL.);
+			optimizelySdk.setLogLevel(null);
 
 // PiRA8qU33qXi5aCoT7yH6
 // https://robisatthefunction.github.io/mockWebsite/?sdkKey=JtG4rUnwTxcpXCVNFND9W
