--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@ window.optimizelySdk = optimizelySdk;
 	 	optimizelyClient.onReady().then(result => {
 		  window.optimizelyClient = optimizelyClient
 
-			const onDecision = (decisionType, userId, attributes, decisionInfo) => {
+	const onDecision = (decisionType, userId, attributes, decisionInfo) => {
   // Add a DECISION Notification Listener for type FEATURE
-	window.decisionType
+	console.log('hello');
   if(decisionType == 'feature') {
     // Access information about feature, for example, key and enabled status
     console.log(decisionInfo['feature_key']);
