--- a/index.html
+++ b/index.html
@@ -36,14 +36,9 @@ window.optimizelySdk = optimizelySdk;
 
 	const onDecision = (decisionType, userId, attributes, decisionInfo) => {
   // Add a DECISION Notification Listener for type FEATURE
-	console.log('hello', decisionInfo);
-  if(decisionType == 'feature') {
     // Access information about feature, for example, key and enabled status
-    console.log(decisionInfo['feature_key']);
-    console.log(decisionInfo['feature_enabled']);
-    console.log(decisionInfo['source']);
+    console.log('decisionType', decisionType);
     // Send data to analytics provider here
-  }
 }
 
 		const notificationId = optimizelyClient.notificationCenter.addNotificationListener(optimizelySdk.enums.NOTIFICATION_TYPES.DECISION, onDecision);
