--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@ const optimizelyClient = optimizelySdk.createInstance({
 				optimizelyClient.track('click', userId);
 			})
 		});
-		window.decision = decision;
+//		window.decision = decision;
 		window.config = config;
 	});
 
