--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@ window.optimizelySdk = optimizelySdk;
 // https://robisatthefunction.github.io/mockWebsite/?sdkKey=JtG4rUnwTxcpXCVNFND9W
 
 const optimizelyClient = optimizelySdk.createInstance({
-	datafile: {version: '4'}
+	sdkKey: sdkKey
 })
 
 /*
