--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
 
 window.optimizelySdk = optimizelySdk;
 
-		optimizelySdk.setLogger(optimizelySdk.logging.createLogger());
+		optimizelySdk.setLogger(null);
 //		optimizelySdk.setLogLevel(optimizelySdk.enums.LOG_LEVEL.DEBUG);
-		optimizelySdk.setLogLevel(null);
+//		optimizelySdk.setLogLevel(null);
 
 // PiRA8qU33qXi5aCoT7yH6
 // https://robisatthefunction.github.io/mockWebsite/?sdkKey=JtG4rUnwTxcpXCVNFND9W
@@ -31,11 +31,6 @@ const optimizelyClient = optimizelySdk.createInstance({
 	sdkKey: sdkKey
 })
 
-/*
-		const optimizelyClient = optimizelySdk.createInstance({
-			sdkKey: sdkKey
-		})
-*/
 	 	optimizelyClient.onReady().then(result => {
 		  window.optimizelyClient = optimizelyClient
 
