--- a/index.html
+++ b/index.html
@@ -20,9 +20,8 @@
 
 window.optimizelySdk = optimizelySdk;
 
-		optimizelySdk.setLogger(null);
-//		optimizelySdk.setLogLevel(optimizelySdk.enums.LOG_LEVEL.DEBUG);
-//		optimizelySdk.setLogLevel(null);
+		optimizelySdk.setLogger(optimizelySdk.logging.createLogger());
+		optimizelySdk.setLogLevel(optimizelySdk.enums.LOG_LEVEL.DEBUG);
 
 // PiRA8qU33qXi5aCoT7yH6
 // https://robisatthefunction.github.io/mockWebsite/?sdkKey=JtG4rUnwTxcpXCVNFND9W
