--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 		<script src="https://unpkg.com/@optimizely/optimizely-sdk/dist/optimizely.browser.umd.min.js"></script>
 	<script>
 	  var maskTimeout          = 3000,
-      hideElementSelectors = ['h1', '.nav'],
+      hideElementSelectors = ['body > header > h1', '.text-nav'],
       syncChangesApplied   = false;      
 
   /**
