--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
   var removeMask = function() {
     // its adequate to remove mask class once on the first sync change
     if(syncChangesApplied) return;
-	if(override != true) {
+	if(override != 'true') {
     cssRuleManager.sheet.disabled = true;
     syncChangesApplied = true;
 	}
