--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@ const optimizelyClient = optimizelySdk.createInstance({
 		  window.optimizelyClient = optimizelyClient
 
 	const onDecision = (decisionType, userId, attributes, decisionInfo) => {
-	console.log('decided1');
+	console.log('decided1', decisionInfo);
   	window.decisionInfo = decisionInfo;
 }
 
