--- a/index.html
+++ b/index.html
@@ -94,13 +94,17 @@ const optimizelyClient = optimizelySdk.createInstance({
 
 	const onDecision = ({decisionType, userId, attributes, decisionInfo}) => {
 	if(decisionInfo['decisionEventDispatched']){
-		var experimentKey = decisionInfo['ruleKey'];
-		var variationKey = decisionInfo['variationKey'];
-		console.log(experimentKey, variationKey);
+		window.dataLayer = window.dataLayer || [];
+		dataLayer.push({
+  			'event': 'optimizely-decision',
+  			'optimizely-flagKey': decisionInfo.flagKey,
+  			'optimizely-ruleKey': decisionInfo.ruleKey,
+  			'optimizely-variationKey': decisionInfo.variationKey,
+		});
 	}
 }
 
-		const notificationId = optimizelyClient.notificationCenter.addNotificationListener(optimizelySdk.enums.NOTIFICATION_TYPES.DECISION, onDecision);
+const notificationId = optimizelyClient.notificationCenter.addNotificationListener(optimizelySdk.enums.NOTIFICATION_TYPES.DECISION, onDecision);
 			//console.log('reason', result.reason);
 
 		//	var config = optimizelyClient.getOptimizelyConfig();
