--- a/index.html
+++ b/index.html
@@ -10,18 +10,19 @@
 		<script src="https://unpkg.com/@optimizely/optimizely-sdk/dist/optimizely.browser.umd.min.js"></script>
 		<script src="https://cdn.optimizely.com/js/9874509362.js"></script>
 		<script>
-		/*
+		const urlParams = new URLSearchParams(window.location.search);
+		const override = urlParams.get('override');
+
 		function getCookie(name){
     		var match = document.cookie.match(name + '=([^;]*)');
     		return match ? match[1] : undefined;
 		}
-		if (!!getCookie('optimizelyEndUserId')) {
+		if (!!getCookie('optimizelyEndUserId') && override == 'true') {
 			window.optimizely = window.optimizely || [];
 			window.optimizely.push({
   				"type": "activate"
 			});
 		}
-		*/
 		</script>
 		<script>
 			!function(){var analytics=window.analytics=window.analytics||[];if(!analytics.initialize)if(analytics.invoked)window.console&&console.error&&console.error("Segment snippet included twice.");else{analytics.invoked=!0;analytics.methods=["trackSubmit","trackClick","trackLink","trackForm","pageview","identify","reset","group","track","ready","alias","debug","page","once","off","on","addSourceMiddleware","addIntegrationMiddleware","setAnonymousId","addDestinationMiddleware"];analytics.factory=function(e){return function(){var t=Array.prototype.slice.call(arguments);t.unshift(e);analytics.push(t);return analytics}};for(var e=0;e<analytics.methods.length;e++){var key=analytics.methods[e];analytics[key]=analytics.factory(key)}analytics.load=function(key,e){var t=document.createElement("script");t.type="text/javascript";t.async=!0;t.src="https://cdn.segment.com/analytics.js/v1/" + key + "/analytics.min.js";var n=document.getElementsByTagName("script")[0];n.parentNode.insertBefore(t,n);analytics._loadOptions=e};analytics._writeKey="SXwf6QOfDBPAGnEBLLXJ7FAqKPsaxxjB";;analytics.SNIPPET_VERSION="4.15.3";
@@ -30,12 +31,10 @@
 			}}();
 		</script>
 	<script>
-	const urlParams = new URLSearchParams(window.location.search);
 
 	  var maskTimeout = parseInt(urlParams.get('timeout')),
       hideElementSelectors = ['body > header > h1', '.text-nav'],
       syncChangesApplied   = false,
-	  override = urlParams.get('override');    
 
   /**
   * Manages CSSStyleSheet actions
