--- a/index.html
+++ b/index.html
@@ -8,6 +8,18 @@
 		<link href="https://fonts.googleapis.com/css?family=Dosis" rel="stylesheet">
 		<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 		<script src="https://unpkg.com/@optimizely/optimizely-sdk/dist/optimizely.browser.umd.min.js"></script>
+		<script>
+		function getCookie(name){
+    		var match = document.cookie.match(name + '=([^;]*)');
+    		return match ? match[1] : undefined;
+		}
+		if (!getCookie('consent')) {
+			window["optimizely"].push({
+  				"type": "optOut",
+  				"isOptOut": true
+			});
+		}
+		</script>
 		<script src="https://cdn.optimizely.com/js/9874509362.js"></script>
 		<script>
 		const urlParams = new URLSearchParams(window.location.search);
