--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@ optimizelyClient.onReady().then(result => {
 		  window.optimizelyClient = optimizelyClient
 
 const onDecision = (decisionEvent) => {
-        window.decisionInfo = decisionEvent.decisionInfo;
+        window.decisionEvent = decisionEvent;
         // This will execute if you have called activate() and the visitor gets into an A/B Test or Feature Test
 		/*
         if (type === 'ab-test' || type === 'feature test') {
