--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 		<link href="https://fonts.googleapis.com/css?family=Dosis" rel="stylesheet">
 		<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 		<script src="https://unpkg.com/@optimizely/optimizely-sdk/dist/optimizely.browser.umd.min.js"></script>
+		<script src="https://cdn3.optimizely.com/js/geo2.js"></script>
 		<script src="https://cdn.optimizely.com/js/9874509362.js"></script>
 		<script>
 		const urlParams = new URLSearchParams(window.location.search);
@@ -30,7 +31,7 @@ const optimizelyClient = optimizelySdk.createInstance({
 })
 
 optimizelyClient.onReady().then(result => {
-		  window.optimizelyClient = optimizelyClient
+		  window.optimizelyClient = optimizelyClient;
 
 const onDecision = (decisionEvent) => {
         window.decisionEvent = decisionEvent;
