--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@ optimizelyClient.onReady().then(result => {
 		<div id="content">
 		<section>
 			<div class="work nav col-md-6">
-					<h2 class="text-nav"><span style="font-size:20px">CTA</span></h2>
+					<h2 class="text-nav"><span style="font-size:20px"><a href="https://secure.creditassociates.com/get-started">CTA</a></span></h2>
 			</div>
 			<div class="contact nav col-md-6">
 					<h2 class="text-nav"><span style="font-size:20px">CTA</span></h2>
